// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> 5개의 메뉴를 가진다 1`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  icon="home"
  location="/"
  to="/"
/>
`;

exports[`<Header /> 5개의 메뉴를 가진다 2`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  icon="user"
  location="/"
  to="/auth"
/>
`;

exports[`<Header /> 정상적으로 렌더링된다 1`] = `
.c0 {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 48rem;
  width: 100%;
  margin: auto;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 0.875rem 0.5rem 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.5rem;
}

@media (max-width:768px) {
  .c0 {
    padding-bottom: 0;
  }
}

@media (max-width:768px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c2 {
    padding-top: 0.75rem;
    padding-bottom: 0;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <img
        class="c3"
        src="/resources/logo.svg"
      />
      <span
        componentname="SearchBar"
      />
    </div>
    <div
      class="c4"
    >
      <span
        componentname="IconButton"
      />
      <span
        componentname="IconButton"
      />
      <span
        componentname="IconButton"
      />
      <span
        componentname="IconButton"
      />
    </div>
  </div>
</div>
`;

exports[`<Header /> 커뮤니티 메뉴가 선택되어 있다 1`] = `
.c0 {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1;
}

@media (max-width:768px) {
  .c0 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
>
  <Container>
    <SearchArea>
      <Image
        src="/resources/logo.svg"
      />
      <SearchBar />
    </SearchArea>
    <ButtonArea>
      <StyledIconButton
        icon="trophy"
        location="/community"
        to="/"
      />
      <StyledIconButton
        icon="star"
        location="/community"
        to="/bookmarks"
      />
      <StyledIconButton
        icon="comment"
        location="/community"
        to="/community"
      />
      <StyledIconButton
        icon="user"
        location="/community"
        to="/auth"
      />
    </ButtonArea>
  </Container>
</div>
`;
